--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.landing.login.LoginDialogFragment">
+    tools:context=".ui.landing.login.LoginFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
