--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -13,7 +13,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="40dp"
         android:layout_gravity="center"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo_bg_remove"/>
 
     <ImageView
         android:layout_width="wrap_content"
