--- a/app/src/main/res/navigation/activity_navigation.xml
+++ b/app/src/main/res/navigation/activity_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_navigation"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/getStartedFragment">
 
     <action
         android:id="@+id/fragment_to_homepage"
@@ -14,13 +14,17 @@
 
     <fragment
         android:id="@+id/homepageFragment"
-        android:name="id.bloopyworks.platform.ui.mainscreen.homepage.HomepageBlankFragment"
+        android:name="id.bloopyworks.platform.ui.mainscreen.homepage.HomepageFragment"
         android:label="fragment_homepage"
-        tools:layout="@layout/fragment_homepage" />
+        tools:layout="@layout/fragment_homepage" >
+        <action
+            android:id="@+id/homepage_to_emailVerif"
+            app:destination="@id/emailVerifFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/getStartedFragment"
-        android:name="id.bloopyworks.platform.ui.landing.GetStartedFragment"
+        android:name="id.bloopyworks.platform.ui.landing.getStarted.GetStartedFragment"
         android:label="fragment_get_started"
         tools:layout="@layout/fragment_get_started" >
         <action
@@ -29,6 +33,9 @@
         <action
             android:id="@+id/getStarted_to_signUp"
             app:destination="@id/signUpDialogFragment" />
+        <action
+            android:id="@+id/getStarted_to_homepage"
+            app:destination="@id/homepageFragment" />
     </fragment>
 
     <fragment
@@ -41,7 +48,7 @@
             app:destination="@id/signUpDialogFragment" />
         <action
             android:id="@+id/login_to_homepage"
-            app:destination="@id/homepageFragment" />
+            app:destination="@id/homepageFragment"/>
     </fragment>
 
     <fragment
@@ -49,5 +56,9 @@
         android:name="id.bloopyworks.platform.ui.landing.signUp.SignUpDialogFragment"
         android:label="fragment_sign_up_dialog"
         tools:layout="@layout/fragment_sign_up_dialog" />
+    <fragment
+        android:id="@+id/emailVerifFragment"
+        android:name="id.bloopyworks.platform.ui.landing.emailVerif.EmailVerifFragment"
+        android:label="EmailVerifFragment" />
 
 </navigation>
