--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.landing.login.LoginFragment">
+    tools:context=".ui.landing.signUp.SignUpFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/btn_backArrow3"
+            android:id="@+id/btn_backArrow"
             android:layout_width="45dp"
             android:layout_height="47dp"
             android:layout_marginStart="20dp"
@@ -24,7 +24,7 @@
             />
 
         <ImageView
-            android:id="@+id/logo3"
+            android:id="@+id/logo"
             android:layout_width="318dp"
             android:layout_height="118dp"
             android:layout_gravity="center"
@@ -32,24 +32,24 @@
             app:srcCompat="@drawable/logo_bg_remove" />
 
         <TextView
-            android:id="@+id/welcomeBack"
+            android:id="@+id/signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="33dp"
-            android:layout_marginTop="55dp"
+            android:layout_marginTop="75dp"
             android:fontFamily="@font/montserrat_medium"
-            android:text="@string/welcomeBack"
+            android:text="@string/sign_up"
             android:textColor="@color/black"
             android:textSize="25sp"/>
 
         <TextView
-            android:id="@+id/login_desc"
+            android:id="@+id/signUp_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="33dp"
             android:layout_marginTop="11dp"
             android:fontFamily="@font/montserrat_regular"
-            android:text="@string/loginAccount"
+            android:text="@string/sign_up_desc"
             android:textColor="@color/black_desc"
             android:textSize="16sp"/>
 
@@ -58,32 +58,30 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/email3"
+                android:id="@+id/user"
                 android:layout_width="45dp"
                 android:layout_height="47dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="33dp"
                 android:layout_marginTop="43dp"
-                android:src="@drawable/ic_email"
-                app:tint="@color/black"
-                />
+                app:srcCompat="@drawable/ic_person"
+                app:tint="@color/black" />
 
             <EditText
-                android:id="@+id/edt_email"
+                android:id="@+id/inputUser"
                 android:layout_width="261dp"
                 android:layout_height="47dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="43dp"
-                android:layout_toEndOf="@+id/email3"
+                android:layout_toEndOf="@+id/user"
                 android:backgroundTint="@color/button_light"
                 android:ems="10"
                 android:fontFamily="@font/montserrat_medium"
-                android:hint="Enter your email"
-                android:inputType="textEmailAddress"
+                android:hint="Enter your password"
+                android:inputType="textPersonName"
                 android:paddingLeft="15dp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/hint"
-                android:textSize="12sp"
-                app:cornerRadius="12dp" />
+                android:textSize="12sp" />
 
         </RelativeLayout>
 
@@ -92,21 +90,53 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/pass3"
+                android:id="@+id/email"
                 android:layout_width="45dp"
                 android:layout_height="47dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="33dp"
+                android:layout_marginTop="13dp"
+                app:srcCompat="@drawable/ic_email"
+                app:tint="@color/black" />
+
+            <EditText
+                android:id="@+id/inputEmail"
+                android:layout_width="261dp"
+                android:layout_height="47dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="13dp"
+                android:layout_toEndOf="@+id/email"
+                android:backgroundTint="@color/button_light"
+                android:ems="10"
+                android:fontFamily="@font/montserrat_medium"
+                android:hint="Enter your password"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="15dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/hint"
+                android:textSize="12sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/pass"
+                android:layout_width="45dp"
+                android:layout_height="47dp"
+                android:layout_marginStart="33dp"
                 android:layout_marginTop="13dp"
                 app:srcCompat="@drawable/ic_key"
                 app:tint="@color/black" />
 
             <EditText
-                android:id="@+id/edt_pass"
+                android:id="@+id/inputPass"
                 android:layout_width="261dp"
                 android:layout_height="47dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="13dp"
-                android:layout_toEndOf="@+id/pass3"
+                android:layout_toEndOf="@+id/pass"
                 android:backgroundTint="@color/button_light"
                 android:ems="10"
                 android:fontFamily="@font/montserrat_medium"
@@ -117,61 +147,90 @@
                 android:textColorHint="@color/hint"
                 android:textSize="12sp" />
 
+            <EditText
+                android:id="@+id/confirmPass"
+                android:layout_width="261dp"
+                android:layout_height="47dp"
+                android:layout_below="@+id/inputPass"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="13dp"
+                android:layout_toEndOf="@+id/pass"
+                android:backgroundTint="@color/button_light"
+                android:ems="10"
+                android:fontFamily="@font/montserrat_medium"
+                android:hint="Confirm your password"
+                android:inputType="textPassword"
+                android:paddingLeft="15dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/hint"
+                android:textSize="12sp" />
+
         </RelativeLayout>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_forgotPass"
-            android:layout_width="160dp"
+        <TextView
+            android:id="@+id/accTerms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="42dp"
+            android:fontFamily="@font/montserrat_regular"
+            android:text="@string/terms"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:layout_gravity="center"/>
+
+        <Button
+            android:id="@+id/btn_terms"
+            android:layout_width="180dp"
             android:layout_height="50dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="-15dp"
             android:backgroundTint="@color/transparent"
             android:background="@color/transparent"
             android:fontFamily="@font/montserrat_regular"
-            android:text="@string/forgotPass"
+            android:text="@string/btn_terms"
             android:textAllCaps="false"
             android:textColor="@color/blue_text"
             android:textSize="15sp"
-            android:letterSpacing="0"/>
+            android:letterSpacing="0"
+            android:layout_gravity="center"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-10dp">
 
             <Button
-                android:id="@+id/btn_Login"
+                android:id="@+id/btn_regis"
                 android:layout_width="238dp"
                 android:layout_height="68dp"
                 android:layout_centerInParent="true"
-                android:layout_marginTop="30dp"
                 android:backgroundTint="@color/button_light"
                 android:fontFamily="@font/montserrat_medium"
                 android:letterSpacing="0"
-                android:text="@string/btn_login"
+                android:text="@string/regis"
                 android:textColor="@color/blue"
                 android:textSize="20sp"
                 app:cornerRadius="20dp" />
 
             <TextView
-                android:id="@+id/doesntHaveAcc"
+                android:id="@+id/haveAcc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/btn_Login"
-                android:layout_marginStart="95dp"
-                android:layout_marginTop="9dp"
+                android:layout_below="@+id/btn_regis"
+                android:layout_marginStart="97dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/montserrat_regular"
-                android:text="@string/dontHaveAcc"
+                android:text="@string/haveAcc"
                 android:textColor="@color/black"
                 android:textSize="13sp" />
 
             <Button
-                android:id="@+id/btn_SignUp"
+                android:id="@+id/btn_login"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_below="@+id/btn_Login"
+                android:layout_below="@+id/btn_regis"
                 android:layout_marginStart="-18dp"
-                android:layout_marginTop="-2dp"
-                android:layout_toEndOf="@+id/doesntHaveAcc"
+                android:layout_marginTop="8dp"
+                android:layout_toEndOf="@+id/haveAcc"
                 android:background="@color/transparent"
                 android:backgroundTint="@color/transparent"
                 android:fontFamily="@font/montserrat_regular"
