--- a/app/src/main/res/layout/activity_early.xml
+++ b/app/src/main/res/layout/activity_early.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.mainscreen.homepage.attendance.AttendanceFragment">
+    tools:context=".ui.mainscreen.homepage.early.EarlyActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,40 +16,40 @@
             android:layout_height="45dp"
             android:background="@color/blue">
 
-            <com.google.android.material.button.MaterialButton
+            <Button
                 android:id="@+id/btn_backArrow8"
                 android:layout_width="45dp"
                 android:layout_height="47dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="-2dp"
-                android:backgroundTint="@color/transparent"
-                app:cornerRadius="180dp"
-                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_marginStart="20dp"
+                android:backgroundTint="@color/blue"
                 android:drawableTop="@drawable/ic_back_arrow"
-                android:drawableTint="@color/white"/>
+                android:drawableTint="@color/white"
+                app:cornerRadius="180dp" />
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="85dp"
+                android:layout_marginStart="65dp"
                 android:layout_marginTop="9dp"
                 android:layout_toEndOf="@+id/btn_backArrow8"
                 android:fontFamily="@font/montserrat_semi_bold"
-                android:text="@string/attendance"
+                android:text="@string/early"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
         </RelativeLayout>
 
-        <Button
-            android:id="@+id/btn_month_dropdown_early"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_month_dropdown"
             style="?android:spinnerStyle"
             android:layout_width="351dp"
             android:layout_height="58dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginVertical="20dp"
-            android:backgroundTint="@color/transparent"
+            app:cornerRadius="20dp"
+            app:strokeWidth="0.5dp"
+            app:strokeColor="@color/black"
             android:drawableLeft="@drawable/ic_calender_gray"
             android:drawablePadding="10dp"
             android:fontFamily="@font/montserrat_medium"
@@ -61,26 +61,37 @@
 
         <Button
             android:id="@+id/btn_req_early"
-            android:layout_width="350dp"
+            android:layout_width="340dp"
             android:layout_height="68dp"
             android:layout_centerInParent="true"
-            android:layout_marginTop="-15dp"
+            android:layout_marginTop="-10dp"
             android:backgroundTint="@color/blue"
             android:fontFamily="@font/montserrat_medium"
             android:letterSpacing="0"
-            android:text="@string/req_attendace"
             android:textAllCaps="false"
+            android:text="@string/req_early"
             android:textColor="@color/white"
-            android:textSize="17sp"
+            android:textSize="20sp"
             app:cornerRadius="20dp"
             android:layout_gravity="center"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="@string/early_detail"
+            android:fontFamily="@font/montserrat_light"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:layout_marginHorizontal="25dp"/>
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/attendanceRecyclerView"
+            android:id="@+id/earlyRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="15dp"
+            android:layout_marginHorizontal="5dp"/>
 
     </LinearLayout>
 
