--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -66,22 +66,31 @@
                 app:srcCompat="@drawable/ic_person"
                 app:tint="@color/black" />
 
-            <EditText
-                android:id="@+id/inputUser"
-                android:layout_width="261dp"
-                android:layout_height="47dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="43dp"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/user"
-                android:backgroundTint="@color/button_light"
-                android:ems="10"
-                android:fontFamily="@font/montserrat_medium"
-                android:hint="Enter your password"
-                android:inputType="textPersonName"
-                android:paddingLeft="15dp"
-                android:textColor="@color/black"
                 android:textColorHint="@color/hint"
-                android:textSize="12sp" />
+                app:boxStrokeColor="@color/transparent">
+
+                <EditText
+                    android:id="@+id/inputUser"
+                    android:layout_width="261dp"
+                    android:layout_height="47dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="43dp"
+                    android:layout_toEndOf="@+id/user"
+                    android:background="@color/button_light"
+                    android:ems="10"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:hint="Full Name"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="15dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/hint"
+                    android:textSize="12sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </RelativeLayout>
 
@@ -98,22 +107,30 @@
                 app:srcCompat="@drawable/ic_email"
                 app:tint="@color/black" />
 
-            <EditText
-                android:id="@+id/inputEmail"
-                android:layout_width="261dp"
-                android:layout_height="47dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="13dp"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/email"
-                android:backgroundTint="@color/button_light"
-                android:ems="10"
-                android:fontFamily="@font/montserrat_medium"
-                android:hint="Enter your password"
-                android:inputType="textEmailAddress"
-                android:paddingLeft="15dp"
-                android:textColor="@color/black"
                 android:textColorHint="@color/hint"
-                android:textSize="12sp" />
+                app:boxStrokeColor="@color/transparent">
+
+                <EditText
+                    android:id="@+id/inputEmail"
+                    android:layout_width="261dp"
+                    android:layout_height="47dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_toEndOf="@+id/email"
+                    android:background="@color/button_light"
+                    android:ems="10"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:paddingLeft="15dp"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </RelativeLayout>
 
@@ -130,40 +147,59 @@
                 app:srcCompat="@drawable/ic_key"
                 app:tint="@color/black" />
 
-            <EditText
-                android:id="@+id/inputPass"
-                android:layout_width="261dp"
-                android:layout_height="47dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="13dp"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="wrap_content"
+                app:passwordToggleEnabled="true"
+                android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/pass"
-                android:backgroundTint="@color/button_light"
-                android:ems="10"
-                android:fontFamily="@font/montserrat_medium"
-                android:hint="Enter your password"
-                android:inputType="textPassword"
-                android:paddingLeft="15dp"
-                android:textColor="@color/black"
-                android:textColorHint="@color/hint"
-                android:textSize="12sp" />
+                android:id="@+id/ti_inputPass"
+                android:textColorHint="@color/gray"
+                app:boxStrokeColor="@color/transparent">
 
-            <EditText
-                android:id="@+id/confirmPass"
-                android:layout_width="261dp"
-                android:layout_height="47dp"
-                android:layout_below="@+id/inputPass"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="13dp"
+                <EditText
+                    android:id="@+id/inputPass"
+                    android:layout_width="261dp"
+                    android:layout_height="47dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="13dp"
+                    android:background="@color/button_light"
+                    android:ems="10"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingLeft="15dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/hint"
+                    android:textSize="12sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/pass"
-                android:backgroundTint="@color/button_light"
-                android:ems="10"
-                android:fontFamily="@font/montserrat_medium"
-                android:hint="Confirm your password"
-                android:inputType="textPassword"
-                android:paddingLeft="15dp"
-                android:textColor="@color/black"
+                app:passwordToggleEnabled="true"
+                android:layout_below="@+id/ti_inputPass"
                 android:textColorHint="@color/hint"
-                android:textSize="12sp" />
+                app:boxStrokeColor="@color/transparent">
+
+                <EditText
+                    android:id="@+id/confirmPass"
+                    android:layout_width="261dp"
+                    android:layout_height="47dp"
+                    android:layout_below="@+id/inputPass"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_toEndOf="@+id/pass"
+                    android:background="@color/button_light"
+                    android:ems="10"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:hint="Confirm Password"
+                    android:inputType="textPassword"
+                    android:paddingLeft="15dp"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
         </RelativeLayout>
 
@@ -229,13 +265,13 @@
                 android:layout_height="40dp"
                 android:layout_below="@+id/btn_regis"
                 android:layout_marginStart="-18dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
                 android:layout_toEndOf="@+id/haveAcc"
                 android:background="@color/transparent"
                 android:backgroundTint="@color/transparent"
                 android:fontFamily="@font/montserrat_regular"
                 android:letterSpacing="0"
-                android:text="@string/btn_signUp"
+                android:text="@string/btn_login"
                 android:textAllCaps="false"
                 android:textColor="@color/blue_text"
                 android:textSize="13sp" />
